--- a/Website/index.html
+++ b/Website/index.html
@@ -34,11 +34,11 @@
     <header style="height: 100%;min-height: 650px;opacity: 1;background-repeat: no-repeat;background-size: auto;background-image: url(&quot;assets/img/background1.png?h=070323b0626531124019eec059d236da&quot;);">
         <div class="container" style="margin-top: 120px;">
             <div class="row">
-                <div class="col-md-6 d-flex justify-content-center"><img class="d-sm-none d-md-inline d-lg-inline d-xl-inline" src="assets/img/SIDlog.png?h=16509e0a22c0259829cb6481b39c770f"></div>
-                <div class="col-md-6" style="margin-top: 100px;">
+                <div class="col-md-6 d-flex justify-content-center"><img class="d-none d-sm-block" src="assets/img/SIDlog.png?h=16509e0a22c0259829cb6481b39c770f"></div>
+                <div class="col-md-6 accessControl" style="margin-top: 100px;">
                     <div>
                         <h1 style="font-size: 60px;letter-spacing: -3px;font-weight: 600;">RETHINK<br>ACCESS CONTROL</h1>
-                        <!-- Start: Lorem Ipsum 1 Paragraph -->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus felis et libero scelerisque, sed aliquet nulla tincidunt. Quisque lorem nisl, semper vitae mattis nec, vestibulum nec risus. Sed ut volutpat tortor, ut sodales diam. Integer at tristique turpis. 
+                        <!-- Start: Lorem Ipsum 1 Paragraph -->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus felis et libero scelerisque, sed aliquet nulla tincidunt. Quisque lorem nisl, semper vitae mattis nec, vestibulum nec risus. Sed ut volutpat tortor, ut sodales diam. Integer at tristique turpis.
 
                         <!-- End: Lorem Ipsum 1 Paragraph -->
                         <div></div><button class="btn btn-info btn-lg border rounded" type="button" style="margin-top: 30px;background-color: #2bbddb;">Get Quote</button><button class="btn btn-info btn-lg border rounded" type="button" style="margin-top: 30px;background-color: #2bbddb;margin-left: 10px;">See Products</button></div>
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="col-md-12" style="margin-top: 80px;">
                     <h1 class="text-center" style="color: rgb(255,255,255);font-size: 60px; font-weight: 600;">What We Do</h1>
-                    <!-- Start: Lorem Ipsum 1 Paragraph -->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus felis et libero scelerisque, sed aliquet nulla tincidunt. Quisque lorem nisl, semper vitae mattis nec, vestibulum nec risus. Sed ut volutpat tortor, ut sodales diam. Integer at tristique turpis. Integer orci leo, fringilla ac aliquet vitae, condimentum non lorem. Duis velit ex, aliquam vel 
+                    <!-- Start: Lorem Ipsum 1 Paragraph -->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus felis et libero scelerisque, sed aliquet nulla tincidunt. Quisque lorem nisl, semper vitae mattis nec, vestibulum nec risus. Sed ut volutpat tortor, ut sodales diam. Integer at tristique turpis. Integer orci leo, fringilla ac aliquet vitae, condimentum non lorem. Duis velit ex, aliquam vel
                     <!-- End: Lorem Ipsum 1 Paragraph -->
                 </div>
             </div>
