--- a/Website/index.html
+++ b/Website/index.html
@@ -25,7 +25,18 @@
                 <div class="collapse navbar-collapse"
                     id="navcol-1">
                     <ul class="nav navbar-nav ml-auto" style="font-weight:500;">
-                        <li class="nav-item" role="presentation"><a class="nav-link dropdown-toggle nav-link">SOLUTIONS</a></li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            SOLUTIONS
+                          </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item py-1" href="#">Action</a>
+                              <a class="dropdown-item py-1" href="#">Another action</a>
+                              <div class="dropdown-divider py-1"></div>
+                              <a class="dropdown-item py-1" href="#">Something else here</a>
+                            </div>
+                        </li>
+
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#">INSIGHT</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#">ABOUT</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="#">CONTACT US</a></li>
@@ -61,7 +72,7 @@
                         What We Do
                     </h1>
                     <p style="color:#fff">
-                    <!-- Start: Lorem Ipsum 1 Paragraph -->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus felis et libero scelerisque, sed aliquet nulla tincidunt. Quisque lorem nisl, semper vitae mattis nec, vestibulum nec risus. Sed ut volutpat tortor, ut sodales diam. Integer at tristique turpis. Integer orci leo, fringilla ac aliquet vitae, condimentum non lorem. Duis velit ex, aliquam vel 
+                    <!-- Start: Lorem Ipsum 1 Paragraph -->Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus felis et libero scelerisque, sed aliquet nulla tincidunt. Quisque lorem nisl, semper vitae mattis nec, vestibulum nec risus. Sed ut volutpat tortor, ut sodales diam. Integer at tristique turpis. Integer orci leo, fringilla ac aliquet vitae, condimentum non lorem. Duis velit ex, aliquam vel
                     <!-- End: Lorem Ipsum 1 Paragraph -->
                     </p>
                 </div>
@@ -214,14 +225,14 @@
     <div class="brands" style="background-color: rgb(24,62,112);">
         <div class="row">
             <div class="col">
-                <h1 class="text-center" style="color: rgb(255,255,255);">
+                <h1 class="text-center" style="color: rgb(255,255,255); margin-top: 20px;">
                     Corporations We Have Worked With:
                 </h1>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <a href="#"> 
+                <a href="#">
                     <img src="assets/img/gepa.png?h=3d7b964558420b8959baa4afe2f2e2da" width="200px">
                     <img src="assets/img/mtn.png?h=e7ed903caf982e4c6e2a81211d44dad3" width="200px">
                     <img src="assets/img/diaspora.png?h=3ac0f6f7784815eaea472952efa96bf3" width="200px">
