background image update

--- a/Website/2020-10-08 CSE Website/index.html
+++ b/Website/2020-10-08 CSE Website/index.html
@@ -55,16 +55,21 @@
             </div>
         </div>
         <!-- End: 1 Row 1 Column -->
-        <!-- Start: 1 Row 1 Column -->
-        <div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12" style="padding-top: 85px;"><img class="img-fluid" src="assets/img/202-10-07_CSE%20Header%20Block%20(4).png?h=a84ac8c4a2094ce95895aad38c831ed6"></div>
+
+        <header class="header" data-stellar-background-ratio="0.5" id="home" style="background-position:50% 0px;">
+            <div class="color-overlay">
+                <!-- Start: 1 Row 1 Column -->
+                <div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12" style="padding-top: 85px;"><img class="img-fluid" src="assets/img/202-10-07_CSE%20Header%20Block%20(4).png?h=a84ac8c4a2094ce95895aad38c831ed6"></div>
+                        </div>
+                    </div>
                 </div>
+                <!-- End: 1 Row 1 Column -->
+                <div class="container" style="margin-top: 8px;"><img class="img-fluid" src="assets/img/2020-10-07_A%20Secure_Innovative%20Way_Identity.png?h=b528b32007d69cf4ecf7af05335cbbf8"></div>
             </div>
-        </div>
-        <!-- End: 1 Row 1 Column -->
-        <div class="container" style="margin-top: 8px;"><img class="img-fluid" src="assets/img/2020-10-07_A%20Secure_Innovative%20Way_Identity.png?h=b528b32007d69cf4ecf7af05335cbbf8"></div>
+        </header>
         <!-- Start: 1 Row 1 Column -->
         <div style="background-color: #fff;">
             <div class="container" style="margin-top: 18px;">
@@ -224,7 +229,19 @@
         <div class="brands" style="margin-top: 100px;">
             <h1 class="text-center" style="font-weight: bold;">Corporations We Have Worked For</h1>
             <div class="container">
-                <a href="#" data-toggle="modal" data-target="#Testimonial" class="text-right" style="padding-top: 0;padding-bottom: 0;margin-right: 70px;color: rgb(49,52,55);">What Clients Say About Us &nbsp;<span><i class="fas fa-chevron-up"></i></span></a></div><a style="background-color: #f7f4f4;padding-top: 20px;"> <img src="assets/img/mtn.png?h=ff1104b534260b9070d001423308a5e9" width="120px"><img src="assets/img/diaspora.png?h=3cc42bccbb40c5ee3ecd263d57a96064" width="120px"><img src="assets/img/ghpa.png?h=5704805da52117a001dc0700fc459108" width="120px"><img src="assets/img/gepa.png?h=0569b4c2d69511198f1c69b57e0ef3ed" width="120px"></a></div>
+            </div>
+            <a style="background-color: #f7f4f4;padding-top: 20px;padding-bottom:20px;">
+                <img src="assets/img/Greyscaled/mtn.png" width="120px">
+                <img src="assets/img/Greyscaled/diaspora.png" width="120px">
+                <img src="assets/img/Greyscaled/gepa.png" width="120px">
+                <img src="assets/img/Greyscaled/ghpa.png" width="120px">
+            </a>
+            <div class="container">
+                <a href="#" data-toggle="modal" data-target="#Testimonial" style="padding-top: 0;padding-bottom:0;margin-top:20px; color:#118ae1; font-weight: 600; font-size:14px">
+                    Don't Just Take Our Word For It. Take It from Our Numerous Proud Customers &nbsp;<span><i class="fas fa-chevron-up"></i></span>
+                </a>
+            </div>
+        </div>
         <!-- End: Brands -->
         <!-- Start: Lightbox Gallery -->
 
