location and testimonial styling update

--- a/Website/2020-10-09 CSE Website/index.html
+++ b/Website/2020-10-09 CSE Website/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>CSE New (copy)</title>
+        <title>CodLogic SE</title>
         <link rel="stylesheet" href="assets/css/bootstrap.css">
         <link rel="stylesheet" href="assets/css/mdb.css">
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"> -->
@@ -240,7 +240,7 @@
                 <img src="assets/img/Greyscaled/ghpa.png" width="120px">
             </a>
             <div class="container">
-                <a href="#" data-toggle="modal" data-target="#Testimonial" style="padding-top: 0;padding-bottom:0;margin-top:20px; color:#118ae1; font-weight: 600; font-size:14px">
+                <a href="#" data-toggle="modal" data-target="#Testimonial" style="padding-top: 0;padding-bottom:0;margin-top:20px; color:#118ae1; font-weight: 600; font-size:14px; font-style: italic;">
                     Don't Just Take Our Word For It. Take It from Our Numerous Proud Customers &nbsp;<span><i class="fas fa-chevron-up"></i></span>
                 </a>
             </div>
@@ -371,7 +371,7 @@
                                 <h4 class="card-title">Title</h4>
                                 <p class="card-text">to contain map...<br><br><br></p>
                                 <div class="row">
-                                    <div class="col-lg-7 offset-lg-0"><span style="font-size: 18px;color:#118ae1;font-weight: bold;">Abelemkpe<br></span><span style="font-size: 14px;">Skika Skika St,<br>Accra, Ghana<br></span>
+                                    <div class="col-lg-7 offset-lg-0"><span style="font-size: 18px;color:#118ae1;font-weight: bold;">Abelemkpe<br></span><span style="font-size: 14px;">Shika Shika St,<br>Accra, Ghana<br></span>
                                         <div></div>
                                     </div>
                                     <div class="col-lg-3 offset-lg-2"><button class="btn btn-light-blue btn-md text-center pull-right" type="button" style="border-radius: 60px;font-weight: bold;font-size: 16px;min-width: 124px;margin-top: 34px;">VIEW</button></div>
@@ -385,7 +385,7 @@
                         </div>
                         <div class="row no-gutters text-left">
                             <div class="col align-self-center">
-                                <p style="font-weight: bold;">No. 1 Kpetenplebi Link<br>Dzorwulu Junction, Accra<br>Opposite GCB Bank Ltd<br>Near Perez Chapel International</p>
+                                <p style="font-weight: bold;">Abelemkpe<br>No.2 Yiyiwa Drive<br>Shika Shika St,<br>Near Population Council<br>Accra, Ghana</p>
                             </div>
                         </div>
                         <div class="row"></div>
