hero section repositioned

--- a/BizLand/index.html
+++ b/BizLand/index.html
@@ -58,7 +58,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="drop-down" style="margin-right:5rem"><a href="">Solutions</a>
+          <li class="drop-down" style="margin-right:5rem"><a>Solutions</a>
             <ul>
               <li><a href="#">SIDLog</a></li>
               <li class="drop-down"><a href="#">QueueLog</a>
@@ -98,7 +98,7 @@
                 <h1 style="font-size:35px;font-weight:500">Welcome to</h1>
                 <h1 class="pt-3"style="color:#009FE3">CodLogic<br>Software Engineering</h1>
                 <p class="pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <div class="d-flex pt-5">
+                <div class="d-flex pt-4 pb-4">
                   <a href="#about" class="btn-get-started scrollto">Get Started</a>
                 </div>
             </div>
