--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -383,7 +383,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Solutions Section ======= -->
-    <section id="services" class="services">
+    <section id="solutions" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -632,8 +632,8 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-            <h3>Saul Goodman</h3>
+            <img src="assets/img/testimonials/man.jpg" class="testimonial-img" alt="">
+            <h3>Fiifi Goodman</h3>
             <h4>Ceo &amp; Founder</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -643,7 +643,7 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/woman.jpg" class="testimonial-img" alt="">
             <h3>Sara Wilsson</h3>
             <h4>Designer</h4>
             <p>
@@ -654,9 +654,9 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
-            <h4>Store Owner</h4>
+            <img src="assets/img/testimonials/woman2.jpg" class="testimonial-img" alt="">
+            <h3>Jena Lamley Kpakpo</h3>
+            <h4>MD</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
@@ -667,7 +667,7 @@
           <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Matt Brandon</h3>
-            <h4>Freelancer</h4>
+            <h4>CEO, Johnson & Johnson</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
