--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -162,7 +162,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about3.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <h3 style="font-size:22px">We are a group of visionary thinkers who strive for the absolute perfection in all our endeavors.</h3>
@@ -182,7 +182,7 @@
                 </div>
               </li>
               <li>
-                <i class="bx bx-images"></i>
+                <i class="icofont-tasks"></i>
                 <div>
                   <h5>Our Plan</h5>
                   <p>Quo totam dolorum at pariatur aut distinctio dolorum laudantium illo direna pasata redi</p>
@@ -669,7 +669,9 @@
           <div class="testimonial-item">
             <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
             <h3>Matt Brandon</h3>
-            <h4>CEO, Johnson & Johnson</h4>
+            <h4>CEO, Johnson & Johnson
+
+            </h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
