--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -24,6 +24,7 @@
   <link href="assets/vendor/fontawesome/all.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/cse.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -88,7 +89,45 @@
                 </div>
             </div>
             <div class="col-lg-5  col-md-6 mt-4 mt-md-0">
-              <img src="assets/img/brandicons.png" class="img-fluid" alt="">
+              <!-- <img src="assets/img/brandicons.png" class="img-fluid" alt=""> -->
+              <div class="contain">
+                <div class="item item1"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item2"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item3"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item4"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item5"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item6"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item7"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item8"><img src="assets/img/split/secure.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item9"><img src="assets/img/split/app.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item10"><img src="assets/img/split/key.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item11"><img src="assets/img/split/shields.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item12"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item13"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item14"><img src="assets/img/split/settings.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item15"><img src="assets/img/split/camera.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item16"><img src="assets/img/split/db.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item17"><img src="assets/img/split/guard.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item18"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item19"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item20"><img src="assets/img/split/lock.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item21"><img src="assets/img/split/id.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item22"><img src="assets/img/split/off.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item23"><img src="assets/img/split/stats.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item24"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item25"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item26"><img src="assets/img/split/network.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item27"><img src="assets/img/split/rf.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item28"><img src="assets/img/split/clock.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item29"><img src="assets/img/split/amplify.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item30"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item31"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item32"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item33"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item34"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item35"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item36"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+            </div>
             </div>
           </div>
 
@@ -186,7 +225,7 @@
     <section id="featured-services" class="featured-services">
       <div class="container" data-aos="fade-up">
 
-        <div class="row">
+        <div class="row d-flex justify-content-center">
               
             <div class="col-md-6 col-lg-3 d-flex justify-conte mb-5 mb-lg-0">
               <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
