Images updated & animation applied to the icons

--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -77,52 +77,54 @@
         <div class="container">
           <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-7 col-md-6" data-aos="zoom-out" data-aos-delay="100">
+              <div id="welcome">
                 <h1 style="font-size:35px;font-weight:500">Welcome to</h1>
                 <h1 class="pt-3"style="color:#009FE3">CodLogic<br>Software Engineering</h1>
                 <p class="pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <div class="d-flex pt-3">
                   <a href="#about" class="btn-get-started scrollto">Get Started</a>
                 </div>
+              </div>
             </div>
             <div class="col-lg-5  col-md-6 mt-4 mt-md-0">
               <!-- <img src="assets/img/brandicons.png" class="img-fluid" alt=""> -->
               <div class="contain">
-                <div class="item item1"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item2"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item3"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item4"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item5"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item6"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item7"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item8"><img src="assets/img/split/secure.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item9"><img src="assets/img/split/app.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item10"><img src="assets/img/split/key.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item11"><img src="assets/img/split/shields.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item12"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item13"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item14"><img src="assets/img/split/settings.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item15"><img src="assets/img/split/camera.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item16"><img src="assets/img/split/db.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item17"><img src="assets/img/split/guard.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item18"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item19"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item20"><img src="assets/img/split/lock.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item21"><img src="assets/img/split/id.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item22"><img src="assets/img/split/off.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item23"><img src="assets/img/split/stats.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item24"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item25"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item26"><img src="assets/img/split/network.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item27"><img src="assets/img/split/rf.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item28"><img src="assets/img/split/clock.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item29"><img src="assets/img/split/amplify.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item30"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item31"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item32"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item33"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item34"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item35"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item36"><img src="assets/img/split/blank.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item1"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item2"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item3"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item4"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item5"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item6"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item7"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item8 anim" onclick="profile()"><img src="assets/img/brandicons/profile.png" alt="Blank Icon" width="60" height="60"></div></a>
+                <div class="item item9 anim"><img src="assets/img/brandicons/software.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item10 anim"><img src="assets/img/brandicons/key.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item11 anim"><img src="assets/img/brandicons/shield.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item12"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item13"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item14 anim"><img src="assets/img/brandicons/Configurable.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item15 anim"><img src="assets/img/brandicons/cctv.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item16 anim"><img src="assets/img/brandicons/database.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item17 anim"><img src="assets/img/brandicons/police.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item18"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item19"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item20 anim"><img src="assets/img/brandicons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item21 anim"><img src="assets/img/brandicons/environmental.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item22 anim"><img src="assets/img/brandicons/faceScan.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item23 anim"><img src="assets/img/brandicons/analysis.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item24"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item25"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item26 anim"><img src="assets/img/brandicons/network.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item27 anim"><img src="assets/img/brandicons/accuracy.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item28 anim"><img src="assets/img/brandicons/log.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item29 anim"><img src="assets/img/brandicons/message.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item30"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item31"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item32"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item33"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item34"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item35"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                <div class="item item36"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
             </div>
             </div>
           </div>
@@ -1297,6 +1299,42 @@
 
       header.classList.toggle('scrolling-active', windowPosition);
     })
+  </script>
+
+  <!-- <script>
+    let welcome = document.getElementById('welcome'),
+    btn = document.getElementById('profile');
+
+btn.addEventListener('click', function () {
+  
+  if (welcome.classList.contains('hidden')) {
+    welcome.classList.remove('hidden');
+    setTimeout(function () {
+      welcome.classList.remove('visuallyhidden');
+    }, 20);
+  } else {
+    welcome.classList.add('visuallyhidden');    
+    welcome.addEventListener('transitionend', function(e) {
+      welcome.classList.add('hidden');
+    }, {
+      capture: false,
+      once: true,
+      passive: false
+    });
+  }
+  
+}, false);
+  </script> -->
+
+  <script>
+    function profile(){
+        var x = document.getElementById("welcome");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+      }
   </script>
 
 </body>
