social icons added

--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -26,6 +26,8 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/cse.css">
+  <link rel="stylesheet" href="assets/css/Social-Icons.css">
+  <link rel="stylesheet" href="assets/css/css/all.min.css">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -1161,6 +1163,16 @@
     <!-- End Contact Section -->
 
   </main>
+
+          <!-- Start: Social Icons -->
+          <div class="social-icons" style="padding: 40px;margin-bottom: 8px;">
+            <h4 class="text-center" style="letter-spacing: -1px;font-weight: bold;">BE IN THE KNOW</h4>
+            <a href="#"><i class="fab fa-twitter shadow-sm" style="color: #051839;font-size: 24px; border: none;"></i></a>
+            <a href="#"><i class="fab fa-facebook-f shadow-sm" style="color: rgb(5,24,57);font-size: 24px; border: none;"></i></a>
+            <a href="#"><i class="fab fa-instagram shadow-sm" style="color: rgb(5,24,57);font-size: 24px; border: none;"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in shadow-sm" style="color: rgb(5,24,57);font-size: 24px; border: none;"></i></a>
+        </div>
+        <!-- End: Social Icons -->
   
   <!-- End #main -->
 
@@ -1230,6 +1242,25 @@
         </div>
       </div>
     </div>
+
+      <!-- Start: 1 Row 4 Columns -->
+      <div class="d-none d-sm-block" style="background-color: #118ae1; padding:20px; margin-bottom: 20px;">
+            
+        <div class="container">
+            <div class="row" style="margin: 0px; ">
+                <div class="col-md-9 col-lg-7 offset-lg-0 offset-xl-0">
+                    <ul style="list-style:square;margin:0px">
+                        <li style="color: rgb(255,255,255);">security &amp; identity management automation</li>
+                        <li style="color: rgb(255,255,255);">UVSS &amp; fleet movement logging system</li>
+                        <li style="color: rgb(255,255,255);">data centre critical power management</li>
+                        <li style="color: rgb(255,255,255);">IoT smart solutions; home, insurance, banking, transportation etc..</li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-0 offset-xl-3"><img class="img-fluid" src="assets/img/logo2.png" style="min-width: 180px;margin: 8px;margin-right: 0px;margin-left: 0px;margin-top: 12px;"></div>
+            </div>
+        </div>
+    </div>
+    <!-- End: 1 Row 4 Columns -->
 
     <div class="container py-4">
       <div class="copyright">
